Update CourseRestController.java